tests/errors/macro/parser_unexpected_eof/eof_in_string.c
int main()
{
	return 0;
}
char ch[] = "d